--- a/examples/Culuh/basic/index.html
+++ b/examples/Culuh/basic/index.html
@@ -3,11 +3,23 @@
 </head>
 <body>
 </body>
+
 <script type="text/javascript" src="../../../src/js/Culuh.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script type="text/javascript">
-	var culuh = new Culuh( '#FFA934' );
-	console.log( culuh.hex('0x') );
-	culuh.rgbUpdate();
-	console.log( culuh.hex('#') );
+	var culuh = new Culuh( '#FFA934' );	
+	//------------------------------------------------------------
+	//  Let's see that desaturation at work
+	//------------------------------------------------------------
+	$( 'body' ).append( '<div id="box1" style="width:100px;height:100px"></div>' );
+	$( 'body' ).append( '<div id="box2" style="width:100px;height:100px"></div>' );
+	$( 'body' ).append( '<div id="box3" style="width:100px;height:100px"></div>' );
+	
+	$( '#box1' ).css({ 'background-color': culuh.hex('#') });
+	culuh.sat( 0.5 );
+	$( '#box2' ).css({ 'background-color': culuh.hex('#') });
+	culuh.sat( 1 );
+	$( '#box3' ).css({ 'background-color': culuh.hex('#') });
 </script>
+
 </html>
