--- a/examples/Culuh/basic/index.html
+++ b/examples/Culuh/basic/index.html
@@ -1,11 +1,12 @@
 <html>
 <head>
+	<title>Culuh: Basic Use</title>
 </head>
 <body>
 </body>
 
 <script type="text/javascript" src="../../../src/js/Culuh.js"></script>
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script type="text/javascript">
 
 	//------------------------------------------------------------
