Added occurs() to StringExt.js and unit tests to go with it.

--- a/test/unit/index.html
+++ b/test/unit/index.html
@@ -12,8 +12,10 @@
 	
 	<!-- add sources to test below -->
 	<script src="../../src/js/Culuh.js"></script>
+	<script src="../../src/js/StringExt.js"></script>
 	
 	<!-- add class-based unit tests below -->
 	<script src="Culuh.js"></script>
+	<script src="StringExt.js"></script>
 </body>
 </html>
