Added some unit tests and improved documentation a bit.

--- a/test/unit/index.html
+++ b/test/unit/index.html
@@ -12,10 +12,16 @@
 	
 	<!-- add sources to test below -->
 	<script src="../../src/js/Culuh.js"></script>
+	<script src="../../src/js/ObjectExt.js"></script>
+	<script src="../../src/js/Sorted.js"></script>
 	<script src="../../src/js/StringExt.js"></script>
+	<script src="../../src/js/TimeStamp.js"></script>
 	
 	<!-- add class-based unit tests below -->
 	<script src="Culuh.js"></script>
+	<script src="ObjectExt.js"></script>
+	<script src="Sorted.js"></script>
 	<script src="StringExt.js"></script>
+	<script src="TimeStamp.js"></script>
 </body>
 </html>
