Added SharedConfig class.

--- a/test/unit/index.html
+++ b/test/unit/index.html
@@ -16,6 +16,7 @@
 	<script src="../../src/js/Sorted.js"></script>
 	<script src="../../src/js/StringExt.js"></script>
 	<script src="../../src/js/TimeStamp.js"></script>
+	<script src="../../src/js/SharedConfig.js"></script>
 	
 	<!-- add class-based unit tests below -->
 	<script src="Culuh.js"></script>
@@ -23,5 +24,6 @@
 	<script src="Sorted.js"></script>
 	<script src="StringExt.js"></script>
 	<script src="TimeStamp.js"></script>
+	<script src="SharedConfig.js"></script>
 </body>
 </html>
