--- a/examples/Palette/basic/index.html
+++ b/examples/Palette/basic/index.html
@@ -7,6 +7,8 @@
 </body>
 
 <script type="text/javascript" src="../../../src/js/Culuh.js"></script>
+<script type="text/javascript" src="../../../src/js/Sorted.js"></script>
+<script type="text/javascript" src="../../../src/js/ObjectExt.js"></script>
 <script type="text/javascript" src="../../../src/js/Palette.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script type="text/javascript">
