Added sort functions to Palette.js.

--- a/examples/Palette/basic/index.html
+++ b/examples/Palette/basic/index.html
@@ -12,8 +12,7 @@
 <script type="text/javascript" src="../../../src/js/Palette.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script type="text/javascript">
-	var palette = new Palette('secondary');
-	palette.print();
+	var palette = new Palette('nes');
 </script>
 
 </html>
