Added Palette unit tests.

--- a/test/unit/index.html
+++ b/test/unit/index.html
@@ -17,6 +17,7 @@
 	<script src="../../src/js/StringExt.js"></script>
 	<script src="../../src/js/TimeStamp.js"></script>
 	<script src="../../src/js/SharedConfig.js"></script>
+	<script src="../../src/js/Palette.js"></script>
 	
 	<!-- add class-based unit tests below -->
 	<script src="Culuh.js"></script>
@@ -25,5 +26,6 @@
 	<script src="StringExt.js"></script>
 	<script src="TimeStamp.js"></script>
 	<script src="SharedConfig.js"></script>
+	<script src="Palette.js"></script>
 </body>
 </html>
