Added ArrayExt.js and a multijoin method.

--- a/test/unit/index.html
+++ b/test/unit/index.html
@@ -15,6 +15,7 @@
 	<script src="../../src/js/ObjectExt.js"></script>
 	<script src="../../src/js/Sorted.js"></script>
 	<script src="../../src/js/StringExt.js"></script>
+	<script src="../../src/js/ArrayExt.js"></script>
 	<script src="../../src/js/TimeStamp.js"></script>
 	<script src="../../src/js/SharedConfig.js"></script>
 	<script src="../../src/js/Palette.js"></script>
@@ -24,6 +25,7 @@
 	<script src="ObjectExt.js"></script>
 	<script src="Sorted.js"></script>
 	<script src="StringExt.js"></script>
+	<script src="ArrayExt.js"></script>
 	<script src="TimeStamp.js"></script>
 	<script src="SharedConfig.js"></script>
 	<script src="Palette.js"></script>
