--- a/test/unit/index.html
+++ b/test/unit/index.html
@@ -19,6 +19,7 @@
 	<script src="../../src/js/TimeStamp.js"></script>
 	<script src="../../src/js/SharedConfig.js"></script>
 	<script src="../../src/js/Palette.js"></script>
+	<script src="../../src/js/DateConvert.js"></script>
 	
 	<!-- add class-based unit tests below -->
 	<script src="Culuh.js"></script>
@@ -29,5 +30,6 @@
 	<script src="TimeStamp.js"></script>
 	<script src="SharedConfig.js"></script>
 	<script src="Palette.js"></script>
+	<script src="DateConvert.js"></script>
 </body>
 </html>
